--- a/ui/templates/editshop.html
+++ b/ui/templates/editshop.html
@@ -17,6 +17,7 @@
             {% endif %}
         </div>
     {% endfor %}
+        <a href="{% url instagram_login %}">Connect Instagram</a>
         <button type="submit">ذخیره تغییرات</button>
     </form>
 </div>
