--- a/ui/templates/profile.html
+++ b/ui/templates/profile.html
@@ -25,6 +25,7 @@
 
   <script src="https://unpkg.com/htmx.org@1.6.1"></script>
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
 
   <!-- Google Fonts -->
@@ -63,7 +64,7 @@
             <h5 style="text-align:center;" class="text-light">{{shop_instance.store_name}}</h5>
          {%endfor%}
         {% endif %}
-        <h3 style="text-align:center;" class="text-light">{{user.username}}</h3>
+        <!--  <h3 style="text-align:center;" class="text-light">{{user.username}}</h3>-->
         <div class="social-links mt-3 text-center">
           
         </div>
