--- a/static/asset/css/style.css
+++ b/static/asset/css/style.css
@@ -24,6 +24,30 @@ body {
   color: #272829;
 }
 
+.loader {
+  display: none; /* Initially hidden */
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 16px;
+  height: 16px;
+  border: 3px solid #ffffff;
+  border-top-color: #4CAF50;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+  transform: translate(-50%, -50%);
+}
+
+/* Loader Animation */
+@keyframes spin {
+  0% {
+      transform: translate(-50%, -50%) rotate(0deg);
+  }
+  100% {
+      transform: translate(-50%, -50%) rotate(360deg);
+  }
+}
+
 a {
   color: #149ddd;
   text-decoration: none;
