--- a/ui/templates/guid.html
+++ b/ui/templates/guid.html
@@ -22,7 +22,7 @@
     </p>
     <h4>۳. تأیید فروشگاه و محصولات
     </h4>
-    <p>بعد از تایید شدن فروشگاه شما و همجنین محصولی که معرفی می کنید از سمت این شاپینگ , می توانید فروشگاه خود را در قسمت فروشگاه من مشاهده کنید.
+    <p>بعد از تایید شدن فروشگاه شما و همچنین محصولی که معرفی می کنید از سمت این شاپینگ , می توانید فروشگاه خود را در قسمت فروشگاه من مشاهده کنید.
     </p>
     <h4>۴. دریافت سفارشات و پردازش آنها
     </h4>
@@ -52,7 +52,7 @@
     </p>
     <h4>۳. افزودن به سبد خرید و تکمیل سفارش
     </h4>
-    <p> پس از انتخاب محصولات مورد نظر، با کلیک روی "افزودن به سبد خرید"، محصولات را به سبد خرید اضافه کنید. سپس روی "تکمیل خرید" کلیک کنید و به صفحه پرداخت امن منتقل شوید. توجه داشته باشید که در این شاپینگ هر فروشگاه،سبد خرید اختصاصیخود را دارد. در نتیجه نمی توانید در یک سفارش از چندین فروشگاه متفاوت خرید کنید.
+    <p> پس از انتخاب محصولات مورد نظر، با کلیک روی "افزودن به سبد خرید"، محصولات را به سبد خرید اضافه کنید. سپس روی "تکمیل خرید" کلیک کنید و به صفحه پرداخت امن منتقل شوید. توجه داشته باشید که در این شاپینگ هر فروشگاه،سبد خرید اختصاصی خود را دارد. در نتیجه نمی توانید در یک سفارش از چندین فروشگاه متفاوت خرید کنید.
     </p>
     <h4>۴. پیگیری سفارشات
     </h4>
