--- a/ui/templates/password_reset.html
+++ b/ui/templates/password_reset.html
@@ -23,7 +23,7 @@
 
 
 
-<section class="container forms">
+<section class="container forms" style="height:100vh;">
     <div class="form login">
         <div class="form-content">
             <header>تغییر رمز عبور</header>
