--- a/ui/templates/password_reset_complete.html
+++ b/ui/templates/password_reset_complete.html
@@ -19,18 +19,19 @@
     </head>
     <body style="direction:rtl">
 
-<section class="container forms">
+<section class="container forms" style="height:100vh;">
     <div class="form login">
         <div class="form-content">
             <header>تغییر رمز عبور انجام شد</header>
             <br>
-            <p>رمز عبور جدید شما با موفقیت تنظیم شد, اکنون می توانید وارد سایت شوید. 
+            <p>رمز عبور جدید شما با موفقیت تنظیم شد, اکنون می توانید وارد سایت شوید. </p>
+            <a style="color:white;" href="{% url 'signin' %}">
                 <div class="field button-field">
                     <button type="submit">
-                        <a style="color:white;" href="{% url 'signin' %}">ورود </a> 
+                 ورود
                     </button>
                 </div>
-               
+            </a> 
         </div>
     </div>
 </section>
