--- a/ui/templates/password_reset_confirm.html
+++ b/ui/templates/password_reset_confirm.html
@@ -19,7 +19,7 @@
     </head>
     <body style="direction:rtl">
 
-<section class="container forms">
+<section class="container forms" style="height:100vh;">
     <div class="form login">
         <div class="form-content">
             <header>رمزعبور جدید</header>
