--- a/ui/templates/password_reset_done.html
+++ b/ui/templates/password_reset_done.html
@@ -21,7 +21,7 @@
         
        
 
-<section class="container forms">
+<section class="container forms" style="height:100vh;">
     <div class="form login">
         <div class="form-content">
            
