--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -159,11 +159,9 @@
         <div class="container">
            <div class="footer_logo"><a href="{% url 'index' %}"><img style="width:150px; length:80px;" src="{% static 'images/logo2.png'  %}"></a></div>
            <div class="input_bt">
-          
+            
               
-              {% if not user.is_authenticated %}
-              <span class="subscribe_bt" id="basic-addon2"><a href="{% url "signin" %}">عضویت</a></span>
-              {% endif%}
+            <a referrerpolicy='origin' target='_blank' href='https://trustseal.enamad.ir/?id=506399&Code=AxLlwiFdpP3Q1Fexlqa3ASMF0XhaeCj8'><img referrerpolicy='origin' src='https://trustseal.enamad.ir/logo.aspx?id=506399&Code=AxLlwiFdpP3Q1Fexlqa3ASMF0XhaeCj8' alt='' style='cursor:pointer' code='AxLlwiFdpP3Q1Fexlqa3ASMF0XhaeCj8'></a>
            
            </div>
            <div class="footer_menu">
