--- a/ui/templates/category.html
+++ b/ui/templates/category.html
@@ -19,7 +19,7 @@
                            {% for subcategory in subcategories %}
                            <div class="most-sellers" >
                               <li>
-                                 <a href="{% url 'subcategory' subname=subcategory.subname %}">
+                                 <a href="{% url 'subcategory' subcategory_slug=subcategory.slug %}">
                               <div class="box_main" >
                                  
                                  
