--- a/ui/templates/subcategory.html
+++ b/ui/templates/subcategory.html
@@ -8,7 +8,7 @@
       <div class="subcat-div" >
          <div class="carousel-item active">
             
-               <h3 class="subcat-title" >{{ subname }}</h3>
+               <h3 class="subcat-title" >{{ subcategory.subname }}</h3>
                <div class="befor-filter">
                   <button style="padding: 4px 6px; background-color:white; color:black; border:none;" 
                   class="btn btn-primary d-block d-md-none" 
