--- a/ui/templates/bankaccount.html
+++ b/ui/templates/bankaccount.html
@@ -16,7 +16,10 @@
           {% endif %}
       </div>
   {% endfor %}
-      <button type="submit">ذخیره</button>
+     
+      <button type="submit" id="submitButton"  >ذخیره</button>
+        
+      <div id="loader"></div>
     </form>
 
 </div>  
