--- a/ui/templates/createshop.html
+++ b/ui/templates/createshop.html
@@ -21,6 +21,9 @@
             </div>
         {% endfor %}
         <p>توجه : هزینه ارسال یکبار برای تمام محصولات شما اعمال می شود.(هزینه به تومان)</p>
-        <button type="submit" class="btn btn-primary">ذخیره</button>
+        
+        <button type="submit" id="submitButton"  class="btn btn-primary">ذخیره</button>
+        
+            <div id="loader"></div>
     </div>
     </form>
