--- a/ui/templates/products.html
+++ b/ui/templates/products.html
@@ -72,11 +72,18 @@
             <br>
             {{ form.instagram_post }}
         </div>
+        
+        <button type="submit" id="submitButton">ذخیره</button>
+        
+            <div id="loader"></div>
 
-        <button type="submit">ذخیره</button>
-        <div id="loader" style="display:none;">...</div>
+        </div>
     </form>
 </div>
+
+
+    
+
 
 <script>
     $(document).ready(function() {
@@ -102,21 +109,4 @@
             });
         });
     });
-</script>
-
-<script>
-    document.getElementById('submitBtn').addEventListener('click', function() {
-        // Show the loader
-        document.getElementById('loader').style.display = 'block';
-        
-        // Optionally hide the button to prevent further clicks
-        document.getElementById('submitBtn').style.display = 'none';
-        
-        // Simulate a delay (e.g., form submission delay) 
-        setTimeout(function() {
-          // Hide the loader after 2 seconds (adjust as needed)
-          document.getElementById('loader').style.display = 'none';
-        }, 2000); // Adjust time to match your form submission or process duration
-      });
-      
 </script>
