--- a/static/asset/css/style.css
+++ b/static/asset/css/style.css
@@ -55,19 +55,20 @@ a {
 }
 
 #loader {
-  border: 4px solid #f3f3f3;
+  display: none;
+  border: 5px solid #f3f3f3; /* Light grey */
+  border-top: 5px solid #3498db; /* Blue */
   border-radius: 50%;
-  border-top: 4px solid #3498db;
-  width: 30px;
-  height: 30px;
+  width: 40px;
+  height: 40px;
   animation: spin 1s linear infinite;
-  margin-top: 10px;
 }
 
 @keyframes spin {
   0% { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
 }
+
 
 a:hover {
   color: #37b3ed;
