--- a/ui/templates/accountinfo.html
+++ b/ui/templates/accountinfo.html
@@ -7,7 +7,10 @@
         <div class="forms" style="height:auto;">
         {% csrf_token %}
       {{ form.as_p }}
-      <button type="submit">ذخیره</button>
+     
+      <button type="submit" id="submitButton"  >ذخیره</button>
+        
+      <div id="loader"></div>
     </div> 
     </form>
 
