--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -168,6 +168,7 @@
               <ul>
                <li><a href="{% url 'blog' %}">دانستنی ها</a></li>
                <li><a href="{% url 'guid' %}">راهنما</a></li>
+               <li><a href="{% url 'privacy_policy' %}">حریم خصوصی</a></li>
                  <li><a href="{% url 'terms&conditions' %}">قوانین و شرایط</a></li>
                  <li><a href="{% url 'contactus' %}">تماس با ما</a></li>
                  <li><a href="{% url 'about' %}">درباره ما</a></li>
