--- a/ui/templates/reports.html
+++ b/ui/templates/reports.html
@@ -196,7 +196,7 @@
           data: {
             labels: last7DaysLabels,
             datasets: [{
-              label: 'Sales (Last 7 Days)',
+              label: 'فروش(۷ روز گذشته)',
               data: last7DaysData,
               fill: false,
               borderColor: 'rgba(75, 192, 192, 1)',
