--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -176,7 +176,7 @@
                 
               </ul>
            </div>
-           
+           <div class="location_main"> 
             <p>ایمیل : <a href="mailto:info@inshopping.ir">info@inshopping.ir</a></p>
            </div>
         </div>
