--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -4,6 +4,10 @@
 <html lang="fa">
    <head>
       <!-- basic -->
+      <meta property="og:title" content="{% block og_title %}{{ title }}{% endblock %}" />
+      <meta property="og:description" content="{% block og_description %}{{ description }}{% endblock %}" />
+      <meta property="og:url" content="{{ request.build_absolute_uri }}" />
+      <meta property="og:image" content="{% block og_image %}{{ image_url }}{% endblock %}" />   
       <meta charset="utf-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1">
