delete-email-text

--- a/ui/templates/base.html
+++ b/ui/templates/base.html
@@ -181,7 +181,7 @@
               </ul>
            </div>
            <div class="location_main"> 
-            <p>ایمیل : <a href="mailto:info@inshopping.ir">info@inshopping.ir</a></p>
+            <p> <a href="mailto:info@inshopping.ir">info@inshopping.ir</a></p>
            </div>
         </div>
      </div>
