--- a/ui/templates/editshop.html
+++ b/ui/templates/editshop.html
@@ -20,9 +20,42 @@
     {% endfor %}
     <p>توجه : هزینه ارسال یکبار برای تمام محصولات شما اعمال می شود.(هزینه به تومان)</p>
        
-        <button type="submit">ذخیره تغییرات</button>
+        <button type="submit" id="submitButton">ذخیره تغییرات</button>
+
+        <div id="loader" style="display:none;"></div>
     </form>
 </div>
+
+
+<!-- CSS for Spinner -->
+<style>
+    #loader {
+        display: none;
+        border: 5px solid #f3f3f3; /* Light grey */
+        border-top: 5px solid #3498db; /* Blue */
+        border-radius: 50%;
+        width: 40px;
+        height: 40px;
+        animation: spin 1s linear infinite;
+        margin-top: 10px; /* Add spacing if needed */
+    }
+
+    @keyframes spin {
+        0% { transform: rotate(0deg); }
+        100% { transform: rotate(360deg); }
+    }
+</style>
+
+<!-- JavaScript to handle loader -->
+<script>
+    document.getElementById('myForm').addEventListener('submit', function (event) {
+        // Show the loader
+        document.getElementById('loader').style.display = 'block';
+        // Hide the submit button to prevent multiple submissions
+        document.getElementById('submitButton').style.display = 'none';
+    });
+</script>
+
 
 <script src="https://unpkg.com/htmx.org/dist/htmx.min.js"></script>
 <script src="{% static 'asset/js/main.js' %}"></script>
