--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1491,6 +1491,7 @@ input.mail_bt::placeholder {
 .pro-btn a {
     padding-top: 2px;
     color: white;
+    text-align: center;
 }
 .pro-btn img {
     width: 30px;
