--- a/ui/templates/productdetails.html
+++ b/ui/templates/productdetails.html
@@ -32,7 +32,7 @@
                     <li><i class="bi bi-chevron-right"></i> <strong>قیمت:</strong> <span>{{product_details.price|custom_price_format }}تومان</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>دسته بندی:</strong> <span>{{product_details.category}}</span></li>
                     <li><i class="bi bi-chevron-right"></i> <strong>زیرمجموعه :</strong> <span>{{product_details.subcategory}}</span></li>
-                    
+                    <li><i class="bi bi-chevron-right"></i> <strong>تخفیف :</strong> <span>{{product_details.discount}}%</span></li>
                   </ul>
                   
                     <p> موجودی:</p>
