--- a/ui/templates/contactus.html
+++ b/ui/templates/contactus.html
@@ -55,7 +55,7 @@
             <div class="phone">
             
               <h4><img style="width:30px; height:30px;" src="{% static 'images/phone-icon.png' %}"> تلفن پشتیبانی :</h4>
-              <p> 0910 60 61 60 3</p>
+              <p style="direction:ltr;"> 0910 60 61 60 3</p>
             </div>
 
            
