--- a/static/css/style.css
+++ b/static/css/style.css
@@ -575,11 +575,11 @@ button {
 }
 .most-sellers {
     position: relative;
-    width: 25%;
+    width: 24%;
     min-height: 1px;
     height: auto;
     background-color: white;
-    margin: 5px;
+    margin: auto;
     border: 1px;
     border-radius: 8px;
 }
@@ -1148,7 +1148,7 @@ a:hover {
     height: 100%;
 }
 .electronic_img img {
-    max-height: 350px;
+    max-height: 400px;
     border: 1px;
     border-radius: 8px 8px 0 0;
     width: 100%;
